# solarpaper

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: collect.yml  render.yml  test.yml
collector/: config.py  horizons.py  main.py  pyproject.toml
data/: physical.json
renderer/: CMakeLists.txt
renderer/app/: CMakeLists.txt  app.cpp  app.hpp
scripts/: update-wallpaper.sh
