[tool.poetry]
name = "collector"
version = "0.1.0"
description = "This codebase generates the orbits.sso.gz file which is used by the renderer."
authors = ["DenizUgur <deniz343@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "3.6.3"
requests = "^2.28.2"
numpy = "^1.23.5"
astropy = "5.2.1"
poliastro = "0.17.0"
numba = "0.56.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
